--- a/style.css
+++ b/style.css
@@ -2,11 +2,155 @@ h2 {
     color: gray;
 }
 
-.highlight {
-    border: solid;
+#profile {
+    display: grid;
+    grid-template-columns: 1fr 3.5fr;
 }
 
-#profile {
-    border: solid;
-    border-color: gray;
+.post_grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.post {
+    width: 100%;
+}
+
+#stat_bar {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+
+    border-top: 1px solid gray;
+    border-bottom: 1px solid gray;
+
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+.stat {
+    text-align: center;
+}
+
+.circle_pic {
+    border: solid gray 1px;
+    border-radius: 50%;
+
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.circle_pic2 {
+    border: solid black 1px;
+    border-radius: 50%;
+
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.highlight_pic {
+    width: 35px;
+    height: 35px;
+
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#profile_pic {
+    width: 50px;
+    height: 50px;
+}
+
+#highlight_area{
+    display: grid;
+    grid-template-columns: 45px 45px 1fr;
+}
+
+.highlight{
+    text-align: center;
+}
+
+#profile_info{
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    height: 50px;
+}
+
+#id{
+    font-size: 18px;
+    font-weight: 100;
+}
+
+button{
+    height: 80%;
+    width: 80%;
+
+    font-size: 10px;
+    background-color: white;
+    border: solid gray 1px;
+    border-radius: 3px;
+}
+
+#top{
+    display: grid;
+    grid-template-columns: 4fr 7fr 4fr;
+    height: 30px;
+
+    border-bottom: solid gray 0.1px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+
+#top_img{
+    margin-left: auto;
+    margin-right: auto;
+
+    height: 100%;
+    object-fit: contain;
+}
+
+#top_input{
+    height: 60%;
+    width: 95%;
+
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+
+    text-align: center;
+    background-color: white;
+
+    border: solid gray 1px;
+    border-radius: 3px;
+
+    font-size: 10px;
+    font-weight: 100;
+}
+
+i{
+    color: gray;
+}
+
+#top i{
+    font-size: 14px;
+}
+
+#top div{
+    text-align: center;
+    padding-top: 6px;
+}
+
+#sub_icon{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+
+    text-align: center;
+    font-size: 15px;
+    height: 30px;
+}
+
+.select{
+    border-bottom: solid gray 3px;
 }
