--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    font-size: 2vw;
+}
+
 h2 {
     color: gray;
 }
@@ -50,21 +54,21 @@ h2 {
 }
 
 .highlight_pic {
-    width: 35px;
-    height: 35px;
+    width: 10vw;
+    height: 10vw;
 
     margin-left: auto;
     margin-right: auto;
 }
 
 #profile_pic {
-    width: 50px;
-    height: 50px;
+    width: 12vw;
+    height: 12vw;
 }
 
 #highlight_area{
     display: grid;
-    grid-template-columns: 45px 45px 1fr;
+    grid-template-columns: 12vw 12vw 1fr;
 }
 
 .highlight{
@@ -74,11 +78,11 @@ h2 {
 #profile_info{
     display: grid;
     grid-template-rows: 1fr 1fr;
-    height: 50px;
+    height: 12vw;
 }
 
 #id{
-    font-size: 18px;
+    font-size: 4vw;
     font-weight: 100;
 }
 
@@ -86,7 +90,7 @@ button{
     height: 80%;
     width: 80%;
 
-    font-size: 10px;
+    font-size: 2vw;
     background-color: white;
     border: solid gray 1px;
     border-radius: 3px;
@@ -95,15 +99,16 @@ button{
 #top{
     display: grid;
     grid-template-columns: 4fr 7fr 4fr;
-    height: 30px;
+    height: 5vw;
+    min-height: 5vw;
 
-    margin-top: 10px;
-    margin-bottom: 5px;
+    margin-top: 3vw;
+    margin-bottom: 3vw;
 }
 
 #line{
     border-bottom: 1px solid gray;
-    margin-bottom: 5px;
+    margin-bottom: 3vw;
 }
 
 #top_img{
@@ -129,7 +134,7 @@ button{
     border: solid gray 1px;
     border-radius: 3px;
 
-    font-size: 10px;
+    font-size: 3vw;
     font-weight: 100;
 }
 
@@ -138,12 +143,12 @@ i{
 }
 
 #top i{
-    font-size: 14px;
+    font-size: 4vw;
 }
 
 #top div{
     text-align: center;
-    padding-top: 6px;
+    padding-top: 3vw;
 }
 
 #sub_icon{
@@ -151,8 +156,8 @@ i{
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 
     text-align: center;
-    font-size: 15px;
-    height: 30px;
+    font-size: 5vw;
+    height: 8vw
 }
 
 .select{
